Added some notes in a small lines of codes for reminders and for Study

--- a/assignment_01.html
+++ b/assignment_01.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Random User Generator</title>
+
+  <!-- Style of the container class-->
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,6 +31,7 @@
       box-sizing: border-box;
       background:rgba(126, 126, 126, 0.833);;
     }
+    
 
     table {
       width: 100%;
@@ -44,6 +48,11 @@
       background-color: #eee;
     }
   </style>
+
+
+
+<!-- Buttons, Selct, Input data -->
+ 
 </head>
 <body>
   <div class="container">
