--- a/Prelim/withModal.html
+++ b/Prelim/withModal.html
@@ -5,6 +5,7 @@
   <title>Random User Generator</title>
 
   <!-- Bootstrap CSS -->
+   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -96,10 +97,10 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS Bundle -->
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Your JS logic -->
+  <!--  JS logic -->
   <script src="WithModal.js"></script>
 </body>
 </html>
